Mon Feb  2 00:28:54 2004  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb (URI::Generic#find_proxy): return nil on loopback
	  address.

	* lib/resolv-replace.rb (BasicSocket#send): don't replace because
	  it has no hostname argument.
	  (IPSocket.getaddress): raise SocketError instead of
	  Resolv::ResolvError for errors.
	  (TCPSocket#initialize, UDPSocket#bind, UDPSocket#connect)
	  (SOCKSSocket#initialize): use IPSocket.getaddress instead of
	  Resolv.getaddress.
	  (UDPSocket#send): recognize 3 arguments form.  try all addresses on
	  4 arguments form.

Sun Feb  1 23:00:00 2004  Shigeo Kobayashi <shigek@ruby-lang.org>

	* ext/bigdecimal.c: Bug in BigDecimal("1e#{n}").add BigDecimal('.5'),n)
	  reported and fixed by Javier Goizueta.

Sun Feb  1 05:30:06 2004  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb (URI::Generic#find_proxy): warn HTTP_PROXY.
	 raise an errror on non-http proxy URI.
	 (OpenURI::Buffer#<<): make a tempfile binmode.

Sun Feb  1 00:57:41 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/parser.rb (RSS::Parser): added @@default_parser. Used
	  XML parser became selectable.
	* test/rss/test_parser.rb: added tests for
	  RSS::Parser.default_parser.

Sat Jan 31 02:28:15 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (RPATHFLAG): set to -Wl,-R like NetBSD on Interix.

Sat Jan 31 01:09:41 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/logger.rb: leading 0 padding of timestamp usec part.

Thu Jan 29 23:11:57 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (DLEXT2): removed.  Ruby does not treat
	  ".dll" as a extention library anymore.

	* bcc32/Makefile.sub, win32/Makefile.sub, wince/Makefile.sub (DLEXT2):
	  ditto.

	* util.c (mblen): fix overrun.  [ruby-dev:22672]

Thu Jan 29 22:41:53 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb: Allow 'link:' in Tidylinks.
	  THis means you can write "see f1[link:files/f1_rb.html]".
